--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -206,7 +206,7 @@
         modal.style.display = "none";
     }
 
-    // When the user clicks anywhere outside of the modal, close it bvc
+    // When the user clicks anywhere outside of the modal, close it bvcc
     window.onclick = function(event) {
         if (event.target == modal) {
             modal.style.display = "none";
