--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1346,5 +1346,138 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
     grid-template-columns: 1.5fr 1fr 1fr 1.5fr;
     gap: 50px;
   }
+  /* Basic styling for the icon */
+  .icon-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f2f2f2;
+  }
 
+  .login-icon {
+    width: 80px;
+    cursor: pointer;
+  }
+
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    /*display: flex;*/
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5); /* Black with opacity */
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+    position: relative;
+    text-align: center;
+  }
+
+  /* Close Button */
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    color: #000;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  /* Style for the login form */
+  .login-header img.logo {
+    width: 160px;
+  }
+
+  .login-header h2 {
+    font-size: 20px;
+    color: #000;
+    margin-bottom: 10px;
+  }
+
+  .login-header p {
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 20px;
+  }
+
+  .login-form p {
+    font-size: 14px;
+    color: #333;
+  }
+
+  .social-login {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 15px 0;
+  }
+
+  .social-login button {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    background-color: white;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+
+  .social-login button:hover {
+    background-color: #f0f0f0;
+  }
+
+  input[type="email"] {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  .checkbox-group {
+    text-align: left;
+    font-size: 12px;
+  }
+
+  .checkbox-group label {
+    display: block;
+    margin: 10px 0;
+  }
+
+  .checkbox-group a {
+    color: #007bff;
+    text-decoration: none;
+  }
+
+  .checkbox-group a:hover {
+    text-decoration: underline;
+  }
+
+  .submit-button {
+    background-color: #000;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+
+  .submit-button:hover {
+    background-color: #333;
+  }
 }
