update fornt end , backend login done

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -31,7 +31,7 @@
 <body>
 <div class="container">
     <h1>Đã xảy ra lỗi</h1>
-    <p>Xin lỗi, đã có sự cố trong hệ thống. Vui lòng thử lại sau.</p>
+    <p>Xin lỗi, đã có sự cố trong hệ thống hoặc bạn không có quyền truy cập. Vui lòng thử lại sau.</p>
     <a href="/">Quay lại trang chủ</a>
 </div>
 </body>
