--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Footcap - Find your footware</title>
+  <title>Inno Spring Stride</title>
 
   <!-- 
     - favicon
@@ -45,7 +45,7 @@
       <div class="overlay" data-overlay></div>
 
       <a href="#" class="logo">
-        <img src="/images/logo.svg" width="160" height="50" alt="Footcap logo">
+        <img src="/images/twitter1.png" width="60" height="50" alt="">
       </a>
 
       <button class="nav-open-btn" data-nav-open-btn aria-label="Open Menu">
@@ -58,8 +58,8 @@
           <ion-icon name="close-outline"></ion-icon>
         </button>
 
-        <a href="#" class="logo">
-          <img src="/images/logo.svg" width="190" height="50" alt="Footcap logo">
+        <a href="/" class="logo">
+          <img src="/images/twitter1.png" width="60" height="60" alt="">
         </a>
 
         <ul class="navbar-list">
@@ -83,9 +83,6 @@
           <li class="navbar-item">
             <a href="#" class="navbar-link">FLASK SALE</a>
           </li>
-          <div>
-            <h6>Xin chào, <span th:text="${name}">Người dùng</span></h6>
-          </div>
           <li class="navbar-item">
             <a href="#" class="navbar-link">Hỗ Trợ</a>
           </li>
@@ -102,20 +99,58 @@
             </button>
           </li>
 
-          <li>
-            <a id="loginIcon" class="nav-action-btn">
+          <!-- Nút Login/Register -->
+          <li id="loginItem" th:if="${userName == null}">
+            <a href="/login-form" class="nav-action-btn">
               <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
               <span class="nav-action-text">Login / Register</span>
             </a>
           </li>
 
-          <!-- Modal container for the login form -->
-          <div id="loginModal" class="modal">
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <div id="modal-body"></div>
+          <!-- Nút Account -->
+          <li id="accountItem" th:if="${userName != null}">
+            <a class="nav-action-btn" data-toggle="modal" data-target="#accountModal">
+              <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
+              <span class="nav-action-text">Account</span>
+            </a>
+          </li>
+
+          <div class="modal fade" id="accountModal" tabindex="-1" role="dialog" aria-labelledby="accountModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content account-modal text-center">
+                <div class="modal-header d-flex justify-content-between align-items-center">
+                  <h4 class="modal-title">
+                    <strong>HI, </strong><span th:text="${userName}">User Name</span>
+                  </h4>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class="account-info mb-4">
+                    <p><strong>Email:</strong> <span th:text="${userEmail}">user@example.com</span></p>
+                    <p class="btn btn-danger"><a href="/admin">HHHHHHHHHHHHHHHHHHH</a></p>
+                  </div>
+                  <div class="modal-footer d-flex flex-column gap-3">
+                    <a href="/forgot-password" class="btn btn-outline-dark btn-lg w-100">Quên mật khẩu?</a>
+                    <a href="/logout" class="btn btn-danger btn-lg w-100">Logout</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
           <li>
             <button class="nav-action-btn">
@@ -143,7 +178,6 @@
 
     </div>
   </header>
-
 
 
 
@@ -247,32 +281,31 @@
           <ul class="filter-list">
 
             <li>
-              <button class="filter-btn  active">All</button>
+              <button class="filter-btn active" data-filter="All">All</button>
             </li>
 
             <li>
-              <button class="filter-btn">Nike</button>
+              <button class="filter-btn"  data-filter="Nike">Nike</button>
             </li>
 
             <li>
-              <button class="filter-btn">Adidas</button>
+              <button class="filter-btn" data-filter="Adidas">Adidas</button>
             </li>
 
             <li>
-              <button class="filter-btn">Puma</button>
+              <button class="filter-btn" data-filter="Puma">Puma</button>
             </li>
 
             <li>
-              <button class="filter-btn">Bata</button>
+              <button class="filter-btn" data-filter="Bata">Bata</button>
             </li>
 
             <li>
-              <button class="filter-btn">Apex</button>
+              <button class="filter-btn" data-filter="Apex">Apex</button>
             </li>
-
           </ul>
 
-          <ul class="product-list">
+          <ul class="product-list" id="product-list">
 
             <li class="product-item">
               <div class="product-card" tabindex="0">
@@ -1523,8 +1556,10 @@
   </a>
 
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-  <!-- 
+  <!--
     - custom js link
   -->
   <script src="/js/script.js"></script>
@@ -1534,7 +1569,6 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 </body>
 
 </html>
