--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
-
   <!-- 
     - preload banner
   -->
@@ -129,10 +128,11 @@
                 <div class="modal-body">
                   <div class="account-info mb-4">
                     <p><strong>Email:</strong> <span th:text="${userEmail}">user@example.com</span></p>
-                    <p class="btn btn-danger"><a href="/admin">HHHHHHHHHHHHHHHHHHH</a></p>
+                    <a style="margin-top: 5px"  href="/admin"Quản Lý Website class="btn btn-secondary" th:if="${vaiTro == 'Admin' || vaiTro == 'EMPLOYEE'}">Manager Website </a>
                   </div>
                   <div class="modal-footer d-flex flex-column gap-3">
                     <a href="/forgot-password" class="btn btn-outline-dark btn-lg w-100">Quên mật khẩu?</a>
+
                     <a href="/logout" class="btn btn-danger btn-lg w-100">Logout</a>
                   </div>
                 </div>
