view sản phẩm homepage

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -266,32 +266,17 @@
 
           <h2 class="h2 section-title">Bestsellers Products</h2>
 
-          <ul class="filter-list">
+          <div class="container">
+            <h2 class="h2 section-title">Bestsellers Products</h2>
 
-            <li>
-              <button class="filter-btn active" data-filter="All">All</button>
-            </li>
-
-            <li>
-              <button class="filter-btn"  data-filter="Nike">Nike</button>
-            </li>
-
-            <li>
-              <button class="filter-btn" data-filter="Adidas">Adidas</button>
-            </li>
-
-            <li>
-              <button class="filter-btn" data-filter="Puma">Puma</button>
-            </li>
-
-            <li>
-              <button class="filter-btn" data-filter="Bata">Bata</button>
-            </li>
-
-            <li>
-              <button class="filter-btn" data-filter="Apex">Apex</button>
-            </li>
-          </ul>
+            <ul class="filter-list">
+              <li><button class="filter-btn active" data-filter="All">All</button></li>
+              <li><button class="filter-btn" data-filter="Nike">Nike</button></li>
+              <li><button class="filter-btn" data-filter="Adidas">Adidas</button></li>
+              <li><button class="filter-btn" data-filter="Puma">Puma</button></li>
+              <li><button class="filter-btn" data-filter="Bata">Bata</button></li>
+              <li><button class="filter-btn" data-filter="Apex">Apex</button></li>
+            </ul>
 
           <ul class="product-list" id="product-list">
 
