--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -204,7 +204,7 @@
     });
 // ahihi
     function fetchProducts() {
-        fetch('/api/sanpham')
+        fetch('/api/san-pham/hien-thi')
             .then(response => {
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
@@ -228,7 +228,6 @@
             })
             .catch(error => console.error('Error fetching products:', error));
     }
-
 </script>
 </body>
 </html>
