--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -160,6 +160,7 @@
 
         </div>
 
+
         <!-- Manage Customers Section -->
         <div id="manage-customers" class="content-section" style="display: none;">
             <h2>Manage Customers</h2>
@@ -187,7 +188,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script>
     function showSection(sectionId) {
         document.querySelectorAll('.content-section').forEach(section => {
@@ -228,6 +229,8 @@
             })
             .catch(error => console.error('Error fetching products:', error));
     }
+
+
 </script>
 </body>
 </html>
